[gd_scene load_steps=4 format=2]

[ext_resource path="res://Inventory/Items/EmptyInventorySlot.png" type="Texture" id=1]
[ext_resource path="res://Inventory/EquipmentSlotDisplay.gd" type="Script" id=2]
[ext_resource path="res://PixelatedFont.tres" type="DynamicFont" id=3]

[node name="EquipmentSlotDisplay" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.471939
margin_bottom = -0.471939
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTextureRect" type="TextureRect" parent="."]
margin_left = 150.0
margin_top = 80.0
margin_right = 170.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 1 )
stretch_mode = 4

[node name="ItemAmountLabel" type="Label" parent="ItemTextureRect"]
margin_left = 9.50089
margin_top = 7.61098
margin_right = 26.5009
margin_bottom = 21.611
custom_fonts/font = ExtResource( 3 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="ItemTextureRect" to="." method="_on_ItemTextureRect_mouse_entered"]
[connection signal="mouse_exited" from="ItemTextureRect" to="." method="_on_ItemTextureRect_mouse_exited"]
